LAU address PMD issues